fix width and scrollbar to address jitter

--- a/starter/static/css/global.css
+++ b/starter/static/css/global.css
@@ -3,6 +3,7 @@
 html {
   margin-left: 20px;
   margin-right: 10px;
+  overflow-y: scroll;
 }
 
 html,
